nav collapse bug fix

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -866,7 +866,6 @@ a:hover .header-profile-image {
     position: absolute;
     float:left;
     top: 0;
-    bottom: 0;
     right: 0;
     left: 0;
     margin: 0;
